Add placeholder files for guidance when creating
Added some placeholder slides to hold the place of he sections to be expanded on later.

--- a/talks/about-rob.html
+++ b/talks/about-rob.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>reveal.js</title>
+    <title>Robert Byrne: A Human In Presentation Form</title>
+
+    <meta name="description" content="Get to know Robert Byrne(Software Developer, Entrepreneur)">
+    <meta name="author" content="Robert Byrne">
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
     <link rel="stylesheet" href="../css/reveal.css">
-    <link rel="stylesheet" href="../css/theme/black.css">
+    <link rel="stylesheet" href="../css/theme/moon.css">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="../lib/css/zenburn.css">
@@ -25,12 +33,69 @@
 <div class="reveal">
     <div class="slides">
         <section>
-            <section>Section 1 Depth 0</section>
-            <section>Section 1 Depth 1</section>
-            <section>Section 1 Depth 2</section>
+            <h1>Welcome!</h1>
+            <h4>So you are looking to learn more about</h4>
+            <h2 style="margin-top:100px">Robert Byrne</h2>
+
+            <aside class="notes">
+                Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+            </aside>
         </section>
 
-        <section>Slide 2</section>
+        <section>
+            <h1>Summary Slide</h1>
+            add internal links to this page based on the sections of this
+        </section>
+
+        <section>
+            <section>
+                <h1>Biography</h1>
+            </section>
+            <section>
+                fill in this slide and below
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h1>Projects</h1>
+            </section>
+            <section>
+                fill in this slide and below
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h1>Public Speaking</h1>
+            </section>
+            <section>
+                fill in this slide and below
+                make sure to add the youtube links
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h1>Propel ICT</h1>
+            </section>
+            <section>
+                fill in this slide and below
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h1>Other Interests</h1>
+            </section>
+            <section>
+                fill in this slide and below
+            </section>
+        </section>
+
+        <section>
+            <h1>The End</h1>
+        </section>
     </div>
 </div>
 
