Addeb bootstrap and embedded video to about-rob
Addeb bootstrap and embedded video to about-rob

--- a/talks/about-rob.html
+++ b/talks/about-rob.html
@@ -9,6 +9,12 @@
     <meta name="description" content="Get to know Robert Byrne(Software Developer, Entrepreneur)">
     <meta name="author" content="Robert Byrne">
 
+    <!-- Bootstrap core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -61,7 +67,12 @@
                 <h1>Projects</h1>
             </section>
             <section>
-                fill in this slide and below
+                <!--<div class="embed-responsive embed-responsive-16by9">-->
+                    <!--<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=vOsf5rHOdag"></iframe>-->
+                <!--</div>-->
+                <section>
+                    <video data-autoplay src="http://leanrob.github.io/assets/Dujour.mp4"></video>
+                </section>
             </section>
         </section>
 
@@ -116,5 +127,15 @@
         ]
     });
 </script>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="../js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="../js/ie10-viewport-bug-workaround.js"></script>
+
 </body>
 </html>
