--- a/talks/about-rob.html
+++ b/talks/about-rob.html
@@ -39,7 +39,7 @@
 <div class="reveal">
     <div class="slides">
         <section>
-            <h1>Welcome!</h1>
+            <h1 style="text-shadow: 10px 10px #000000;">Welcome!</h1>
             <h4>So you are looking to learn more about</h4>
             <h2 style="margin-top:100px">Robert Byrne</h2>
 
@@ -49,8 +49,7 @@
         </section>
 
         <section>
-            <h1>Summary Slide</h1>
-            add internal links to this page based on the sections of this
+            <h1 style="margin-bottom:0px;padding-bottom:0;text-shadow: 10px 10px #000000;">Welcome!</h1>
         </section>
 
         <section>
@@ -73,6 +72,9 @@
                 <section>
                     <video data-autoplay src="http://leanrob.github.io/assets/Dujour.mp4"></video>
                 </section>
+            </section>
+            <section data-background-video="http://leanrob.github.io/assets/Dujour.mp4,https://s3.amazonaws.com/static.slid.es/site/homepage/v1/homepage-video-editor.webm" data-background-video-loop data-background-video-muted>
+                <h2>Video</h2>
             </section>
         </section>
 
