Added webm video to assets
Added webm video to assets

--- a/talks/about-rob.html
+++ b/talks/about-rob.html
@@ -73,7 +73,7 @@
                     <video data-autoplay src="http://leanrob.github.io/assets/Dujour.mp4"></video>
                 </section>
             </section>
-            <section data-background-video="http://leanrob.github.io/assets/Dujour.mp4,https://s3.amazonaws.com/static.slid.es/site/homepage/v1/homepage-video-editor.webm" data-background-video-loop data-background-video-muted>
+            <section data-background-video="http://leanrob.github.io/assets/Dujour.mp4,http://leanrob.github.io/assets/Dujour.webm" data-background-video-loop data-background-video-muted>
                 <h2>Video</h2>
             </section>
         </section>
