--- a/talks/about-rob.html
+++ b/talks/about-rob.html
@@ -83,8 +83,15 @@
                 <h1>Public Speaking</h1>
             </section>
             <section>
-                fill in this slide and below
-                make sure to add the youtube links
+                <p class="fragment grow">grow</p>
+                <p class="fragment shrink">shrink</p>
+                <p class="fragment fade-out">fade-out</p>
+                <p class="fragment fade-up">fade-up (also down, left and right!)</p>
+                <p class="fragment current-visible">visible only once</p>
+                <p class="fragment highlight-current-blue">blue only once</p>
+                <p class="fragment highlight-red">highlight-red</p>
+                <p class="fragment highlight-green">highlight-green</p>
+                <p class="fragment highlight-blue">highlight-blue</p>
             </section>
         </section>
 
