--- a/talks/about-rob.html
+++ b/talks/about-rob.html
@@ -21,7 +21,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
     <link rel="stylesheet" href="../css/reveal.css">
-    <link rel="stylesheet" href="../css/theme/moon.css">
+    <!--Do not use the following...-->
+    <!--beige.css, serif.css, simple.css, white.css-->
+    <link rel="stylesheet" href="../css/theme/sky.css">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="../lib/css/zenburn.css">
@@ -38,28 +40,97 @@
 <body>
 <div class="reveal">
     <div class="slides">
+
+        <!--  ## Welcome Section  -->
+        <!--To be kept to 2 pages, Welcome Page & Controls/Key-->
+
         <section>
-            <h1 style="text-shadow: 10px 10px #000000;">Welcome!</h1>
-            <h4>So you are looking to learn more about</h4>
-            <h2 style="margin-top:100px">Robert Byrne</h2>
+            <h1 style="margin-top:0px;text-shadow: 10px 10px #000000;">Welcome!</h1>
+            <h4 style="margin-top:100px">So you are looking to learn more about...</h4>
+            <h2 style="margin-top:100px;text-shadow: 10px 10px #000000">Robert Byrne</h2>
+            <p style="text-size:12px">Press LEFT to learn more.</p>
+            <p style="text-size:12px;margin-top:5px">or...</p>
+            <p style="text-size:12px;margin-top:5px">Press DOWN to view controls.</p>
 
             <aside class="notes">
                 Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
             </aside>
         </section>
 
+        <!--  ## Biography Section  -->
+        <!--This section should be 3-5 slides deep. However, the first slide should serve as an overview.-->
+
         <section>
-            <h1 style="margin-bottom:0px;padding-bottom:0;text-shadow: 10px 10px #000000;">Welcome!</h1>
+
+            <!--Slide 1: Overview-->
+            <section>
+
+                <div style="position:absolute;top:-275px;left:-100px;width:75%;height:75%">
+                    <img src="../assets/images/robert-byrne-pitching-circle.png" style="background:none;border:none;box-shadow:none;" />
+                </div>
+                <div style="text-align:center;position:absolute;top:-250px;right:0px;width:80%;">
+                    <div><h4>Who is this</h4> <h3>Robert Byrne?</h3></div>
+                </div>
+                <p style="text-align:left;position:absolute;top:-200px;right:-20px;width:80%;">Rob is a software developer and entrepreneur with a passion for building valuable software products.His skills include mobile and software development, value proposition design and many more.</p>
+
+
+                <aside class="notes">
+                    <div>Biography Section</div>
+                    <div>This section should go through my life and how it is relevant to jobs I want to attain.</div>
+                    <div>Slide 1: Overview with my picture, age, passions, degrees and all my contact information.</div>
+                </aside>
+            </section>
+            <!--Slide 2-->
+            <section>
+                fill in this slide and below
+
+                <aside class="notes">
+                    Biography Section
+                    <div>Slide 2: My younger years in Newfoundland, - [ ] add some images of NL and write a description.</div>
+
+                </aside>
+            </section>
+            <!--Slide 3-->
+            <section>
+                Slide 3
+
+                <aside class="notes">
+                    Biography Section
+                    <div>Slide 3: Show the move to Vancouver and some pictures of the city as well, write description.</div>
+                </aside>
+            </section>
+            <!--Slide 4-->
+            <section>
+                Slide 4
+
+                <aside class="notes">
+                    Biography Section
+                    <div>Slide 4: The future. Show my possible moves from Van to all desired work places. Citizen of the world.</div>
+                </aside>
+            </section>
+
+
+            <aside class="notes">
+                Biography Section
+                <div>This section should go through my life and how it is relevant to jobs I want to attain.</div>
+                <div>Slide 1: Overview with my picture, age, passions, degrees and all my contact information.</div>
+                <div>Slide 2: My younger years in Newfoundland, - [ ] add some images of NL and write a description.</div>
+                <div>Slide 3: Show the move to Vancouver and some pictures of the city as well, write description.</div>
+                <div>Slide 4: The future. Show my possible moves from Van to all desired work places. Citizen of the world.</div>
+            </aside>
         </section>
+
+        <!--  ## Work and Experience Section  -->
+        <!--This section should be 3-5 slides deep. However, the first slide should serve as an overview.-->
 
         <section>
             <section>
-                <h1>Biography</h1>
-            </section>
-            <section>
-                fill in this slide and below
+                <h1>Work & Education</h1>
             </section>
         </section>
+
+        <!--  ## Current Projects Section  -->
+        <!--This section will likely be broken up into 2 sections. One for Startups and one for side-projects.-->
 
         <section>
             <section>
@@ -74,9 +145,11 @@
                 </section>
             </section>
             <section data-background-video="http://leanrob.github.io/assets/Dujour.mp4,http://leanrob.github.io/assets/Dujour.webm" data-background-video-loop data-background-video-muted>
-                <h2>Video</h2>
             </section>
         </section>
+
+        <!--  ## Public Speaking Section  -->
+        <!--This section should take them from where I was to where I am in terms of public speaking.-->
 
         <section>
             <section>
@@ -95,14 +168,32 @@
             </section>
         </section>
 
+        <!--  ## Propel ICT Section  -->
+        <!--This section will go through the sessions and people I interacted with during them.-->
+
         <section>
-            <section>
-                <h1>Propel ICT</h1>
+            <section data-background-color="#FFFFFF">
+                <div class="row">
+                    <div class="span9">
+                        <img src="../assets/images/PropelICTLogo.png">
+                        <div class="row">
+                            <div class="span6">Level 2</div>
+                            <div class="span3">Level 2</div>
+                        </div>
+                    </div>
+                </div>
             </section>
-            <section>
-                fill in this slide and below
+            <section data-markdown>
+                <script type="text/template">
+                    ## Page title
+
+                    A paragraph with some text and a [link](http://hakim.se).
+                </script>
             </section>
         </section>
+
+        <!--  ## Other Interests  -->
+        <!--This will be an optional section and may be indicated as such to not waste anyone's time.-->
 
         <section>
             <section>
