Change Background image and text
- Change the background image to firenxe.png, taken by [http://leanrob.com](Robert Byrne)

- Change the text to a discription of [http://leanrob.com](Robert Byrne)

- Change the links to link to [http://leanrob.com](leanrob.com)

--- a/index.html
+++ b/index.html
@@ -41,20 +41,21 @@
 
 			<div class="masthead clearfix">
 				<div class="inner">
-					<h3 class="masthead-brand">Cover</h3>
+					<img src="assets/images/robert-byrne-pitching-circle.png" class="masthead-brand" style="max-width: 75px; max-height: 75px;" />
+					<!--<img src="" class="masthead-brand">Cover</img>-->
 					<nav>
 						<ul class="nav masthead-nav">
 							<li class="active"><a href="#">Home</a></li>
-							<li><a href="#">Features</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="http://leanrob.com">leanrob.com</a></li>
+							<li><a href="http://leanrob.com/#contact-me">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
 			</div>
 
 			<div class="inner cover">
-				<h1 class="cover-heading">Cover your page.</h1>
-				<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+				<h1 class="cover-heading">Robert Byrne</h1>
+				<p class="lead">A software developer, entrepreneur and all around startup guy. His passions include backpacking, drinking cold beer and growing software startups of all sizes..</p>
 				<p class="lead">
 					<a href="#" class="btn btn-lg btn-default">Learn more</a>
 				</p>
@@ -62,7 +63,7 @@
 
 			<div class="mastfoot">
 				<div class="inner">
-					<p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+					<p>Cover photo taken by <a href="http://leanrob.com">Robert Byrne</a>, cover theme by <a href="https://twitter.com/mdo">@mdo</a>.</p>
 				</div>
 			</div>
 
