--- a/talks/about-rob.html
+++ b/talks/about-rob.html
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="../css/reveal.css">
     <!--Do not use the following...-->
     <!--beige.css, serif.css, simple.css, white.css-->
-    <link rel="stylesheet" href="../css/theme/sky.css">
+    <link rel="stylesheet" href="../css/theme/default-rob.css">
+    <!--league is ok for the background-->
+    <!--moon background is also nice-->
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="../lib/css/zenburn.css">
@@ -126,6 +128,57 @@
         <section>
             <section>
                 <h1>Work & Education</h1>
+                <h3>Summary</h3>
+                <p><strong>UCdeploy</strong>: Co-Founder</p>
+                <p><strong>DuJour meal planner</strong>: Co-Founder</p>
+                <p><strong>TheSmarterTrade</strong>: Freelance Web Work</p>
+                <p><strong>Fugro GeoSurveys</strong>: Offshore Electronics Technologist</p>
+                <h4>Press DOWN to see more details</h4>
+            </section>
+            <!--UCdeploy-->
+            <section>
+                <h2>UCdeploy</h2>
+                <!--Link website-->
+                <p><strong>Skills Used:</strong> Value Proposition Design, Lean Business Model Canvas, In-Bound Marketing,
+                Website Design and Creation, Wordpress, HTML, CSS, JS, Visual Studio, Sales, Customer
+                Development, Execution Planning.
+                    </p>
+                <p><strong>Role Overview:</strong> One of the founders of UCdeploy, responsible for creating the business and
+                financial model. customer development problem/solution/MVP interviews. Software that
+                significantly reduces the time and effort in deploying large-scale sets of Cisco Unified
+                Communications devices. Personally responsible for creating a product website using
+                Wordpress, Divi theme, plenty of custom CSS and HTML. Involved in the planning and
+                development of the software.
+                    </p>
+                <p><strong>Interesting Challenges:</strong> We were looking to sell this product to professionals who already
+                have the knowledge to do their job, therefore it was difficult to convince them of the value of
+                our product. What we did was setup a VM specifically for sales so that we could show them on a
+                call just how much better our product is. We would show them the 3 methods available to
+                them. Manual entry, using the BAT tool, and using UCdeploy. Once they saw the little amount of
+                time and complexity that went into UCdeploy we got much better responses.
+                </p>
+            </section>
+            <!--DuJour-->
+            <section>
+                <h2>DuJour meal planner</h2>
+                <p><strong>Skills Used:</strong> iOS Development, Swift, Cocoa Touch,  RealmIO, Test Driven Development, Git, Github, Execution Planning, In-Bound Marketing, MailChimp, CRM (Hubspot), Wordpress, HTML, CSS, Value Proposition Design, Lean Methodologies, Lean Business Model Canvas, Apple’s Interface and design guidelines.
+                </p>
+                <p><strong>Role Overview:</strong> Startup founder responsible for the design and development of our iOS Beta using Swift and Cocoa Touch. A member of the 2016 Propel ICT Startup Accelerator’s Launch program learning and applying fundamental parts of any startup; execution planning, risk analysis, cash-flow planning, hiring, sales, VC pitches, incorporation, legal matters, social marketing and in-bound marketing with Facebook Ads and Google Ads.
+                </p>
+                <p><strong>Interesting Challenges:</strong> When the Beta was in development we decided to use Parse to reduce the time to get an MVP to potential customers. Just as we are polishing up the final aspects of the Beta, Parse announces they are being shut down by Facebook. Since they would be operational for another year we decided to launch the Beta using Parse but decided to look into building our own backend using Amazon AWS. In the end the Beta was released and it was decided that we would need a custom backend for future cross platform apps.
+                </p>
+
+
+
+                <!--Link to Propel ICT slides-->
+            </section>
+            <!--TheSmarterTrade-->
+            <section>
+                <h2>TheSmarterTrade</h2>
+            </section>
+            <!--Fugro-->
+            <section>
+                <h2>Fugro GeoSurveys</h2>
             </section>
         </section>
 
@@ -140,11 +193,16 @@
                 <!--<div class="embed-responsive embed-responsive-16by9">-->
                     <!--<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=vOsf5rHOdag"></iframe>-->
                 <!--</div>-->
-                <section>
-                    <video data-autoplay src="http://leanrob.github.io/assets/Dujour.mp4"></video>
-                </section>
+                <!--<section>-->
+                    <!--<video data-autoplay src="http://leanrob.github.io/assets/Dujour.mp4"></video>-->
+                <!--</section>-->
+            <!--</section>-->
+            <!--<section data-background-video="http://leanrob.github.io/assets/Dujour.mp4,http://leanrob.github.io/assets/Dujour.webm" data-background-video-loop data-background-video-muted>-->
             </section>
-            <section data-background-video="http://leanrob.github.io/assets/Dujour.mp4,http://leanrob.github.io/assets/Dujour.webm" data-background-video-loop data-background-video-muted>
+            <section>
+                <iframe width="420" height="315"
+                        src="https://www.youtube.com/watch?v=vOsf5rHOdag">
+                </iframe>
             </section>
         </section>
 
@@ -154,6 +212,16 @@
         <section>
             <section>
                 <h1>Public Speaking</h1>
+            </section>
+            <section>
+                <h2>Propel ICT</h2>
+                <h3>Startup Accelerator Launch Program</h3>
+                <!--Add Propel ICT Logo and a link to the site-->
+            </section>
+            <section>
+                <h3>DuJour Propel ICT Final Pitch 2015</h3>
+                <iframe width="900" height="550" src="https://www.youtube.com/embed/vOsf5rHOdag" frameborder="0" allowfullscreen></iframe>
+                <p>Thanks to <a href="http://www.workatcommonground.com/">Common Ground</a> for hosting the event!</p>
             </section>
             <section>
                 <p class="fragment grow">grow</p>
