--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 	<title>Cover Template for Bootstrap</title>
 
-	<script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<!--<script>-->
+        <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
+                <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
+            <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
+        <!--})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');-->
 
-        ga('create', 'UA-92528458-1', 'auto');
-        ga('send', 'pageview');
+        <!--ga('create', 'UA-92528458-1', 'auto');-->
+        <!--ga('send', 'pageview');-->
 
-	</script>
+	<!--</script>-->
 
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
